# yandex-test

./: .gitignore  LocalDockerfile  README.md  docker-compose.yml  pyproject.toml  run_bot.py
bot/: main.py
bot/config/: settings.py
bot/endpoints/: handlers.py  keyboards.py  text.py
bot/services/: files.py  models.py
